# RustySearch

./: .gitignore  PLAN.md  README.md
mini-search-engine/: Cargo.toml
mini-search-engine/src/: crawler.rs  index.rs  main.rs  search.rs  tokenize.rs
